test.yaml

# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: traefik-dashboard
#   namespace: ingress
# spec:
#   routes:
#   - match: (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
#     kind: Rule
#     services:
#       - name: api@internal
#         kind: TraefikService
#   tls: {}

---
kind: Pod
apiVersion: v1
metadata:
  name: foo-app
  labels:
    app: http-echo
spec:
  containers:
  - name: foo-app
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text=foo"
---
kind: Pod
apiVersion: v1
metadata:
  name: bar-app
  labels:
    app: http-echo
spec:
  containers:
  - name: bar-app
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text=bar"
---
kind: Service
apiVersion: v1
metadata:
  name: foo-service
spec:
  type: ClusterIP
  selector:
    app: http-echo
  ports:
  # Default port used by the image
  - port: 5678

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: foo-service
spec:
  routes:
  - match: Host(`echo.traefik`)
    kind: Rule
    services:
      - name: foo-service
        kind: Service
        port: 5678
  tls: {}

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: ingress
spec:
  routes:
  - match: (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
    kind: Rule
    services:
      - name: api@internal
        kind: TraefikService
  tls: {}
